# match-learn

./: .gitignore  CHANGELOG.md  COMMIT_MSG.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: README.md  integrated_bench.py  python_bench.py
docs/: HANDOFF.md  TUTORIAL.md  stall-anatomy.md  stall-avoidance.md  theory-annealing.md  theory-identifiability.md  theory-stability-objective.md  theory-verification-2026-06-10.md
examples/: anneal_convergence.rs  anneal_study.rs  bench_export.rs  benchmark.rs  cascade_lower_bound.rs  converge.rs  coordinated_poc.rs  coordinated_validation.rs  decay_rate.rs  dissect_stall.rs  embedding_trinity.rs  eps_stability.rs  export_csv.rs  fig_two_by_two.rs  irreversible_interviews.rs  multipair_floor.rs  neartie_analysis.rs  net_floor_4x4.rs  online_matching.rs  price_as_preference.rs  price_of_stability.rs  prop4_gating_study.rs  receiver_informed.rs  regret_queue.rs  ride_hailing.rs  stability_objective.rs  stability_vs_optimality.rs  stall_study.rs  theory_verification.rs  two_sided_stall.rs
python/: example.py
src/: admissible.rs  allocation.rs  applications.rs  assignment.rs  auction.rs  boston.rs  contextual.rs  contracts.rs  coordinated.rs  data.rs  embedding.rs  eval.rs  fairness.rs  irreversible.rs  joint.rs  kidney.rs  lattice.rs  learner.rs  lib.rs  linalg.rs  many_to_many.rs  many_to_one.rs  market.rs  marketplace.rs  matching.rs  online.rs  parallel.rs  prefs.rs  pricing.rs  python.rs  reserves.rs  rng.rs  strategyproof.rs  ties.rs  ttc.rs  two_sided.rs
tests/: gate.rs  regret_scaling.rs
