[package]
name = "match-learn"
version = "0.1.0"
edition = "2024"
description = "Online preference learning x stable matching"
license = "MIT"
repository = "https://github.com/natu123/match-learn"
keywords = ["matching", "bandit", "stable-matching", "online-learning"]
categories = ["algorithms", "science"]

[lib]
# rlib for Rust consumers (tests, examples, downstream crates); cdylib for the
# optional Python extension module built via maturin.
crate-type = ["rlib", "cdylib"]

[features]
# Opt-in Python bindings. The pure-Rust core stays dependency-free by default.
python = ["dep:pyo3"]
# Opt-in Serialize/Deserialize on the public data types.
serde = ["dep:serde"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
